fix: resource explorer scroll overflow

--- a/src/apps/forge/forge.scss
+++ b/src/apps/forge/forge.scss
@@ -13,6 +13,11 @@ $fa-font-path: "./fonts";
 @import "../game/styles/grant-access-modal.scss";
 @import "styles/component-keyframe.scss";
 
+html, body, #root {
+  height: 100vh;
+  width: 100vw;
+}
+
 :focus {
   outline: -webkit-focus-ring-color auto 0px;
 }
